# notes_bot

./: README.md  config.py  database.py  example-config.toml  main.py  misc.py  pyproject.toml
handlers/: __init__.py  notes.py  start.py
scripts/: create_database.py
